# Discord-Quest-Complete-Without-Game-Installing

./: LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  rpc.rs  runner.rs
src-template/: Cargo.toml  main.rs
src-template/src/: main.rs
src-win/: Cargo.toml  build.rs
src-win/src/: main.rs  main_with_tray_icon.rs  text-renderer.rs  tray.rs  windows_api_main.rs  with-tray-icon.rs
src/components/: GameCard.vue  GameExecutables.vue  IconRustLang.vue  IconVerified.vue  IconVueJs.vue  MainLayout.vue  TimedNotification.vue
src/composables/: app-state.ts  fetch-gamelist.ts
src/constants/: constants.ts
src/pages/: HomeView.vue  Playground.vue
src/services/: fake-games.ts
src/types/: types.d.ts
src/utils/: random-string.ts
